# wosim

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-bake.json  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml
crates/client/: Cargo.toml
crates/client-gpu/: Cargo.toml
crates/client-gpu/src/: lib.rs
crates/client-shader/: Cargo.toml
crates/client-shader/src/: lib.rs
crates/client-spirv/: Cargo.toml  build.rs
crates/client-spirv/src/: lib.rs
crates/client/src/: action.rs  cache.rs  character.rs  debug.rs  frame.rs  lib.rs  region.rs  renderer.rs  run.rs  state.rs  subscriber.rs  vulkan.rs  world.rs
crates/client/src/cull/: context.rs  frame.rs  mod.rs
crates/client/src/depth/: context.rs  image.rs  mod.rs
crates/client/src/egui/: context.rs  font.rs  frame.rs  mod.rs
crates/client/src/game/: context.rs  mod.rs  view.rs
crates/client/src/root/: context.rs  frame.rs  mod.rs  state.rs  surface.rs
crates/client/src/scene/: context.rs  data.rs  frame.rs  mod.rs  pipeline.rs
crates/client/src/session/: context.rs  mod.rs  state.rs
crates/client/src/terrain/: context.rs  data.rs  frame.rs  mod.rs  pipeline.rs
crates/database/: Cargo.toml
crates/database/src/: allocator.rs  cursor.rs  database.rs  file.rs  free_list.rs  header.rs  lib.rs  lock.rs  mapping.rs  mmap.rs  object.rs  page.rs  raw.rs  reference.rs  sync.rs  vec.rs
crates/database/src/tree/: branch.rs  cursor.rs  leaf.rs  mod.rs  node.rs
crates/derive/: Cargo.toml
crates/derive/src/: db_vec.rs  inspect.rs  lib.rs  vec.rs
crates/generator/: Cargo.toml
crates/generator-shader/: Cargo.toml
crates/generator-shader/src/: lib.rs
crates/generator-spirv/: Cargo.toml  build.rs
crates/generator-spirv/src/: lib.rs
crates/generator/src/: control.rs  generator.rs  lib.rs  notification.rs  service.rs
crates/gpu-util/: Cargo.toml
crates/gpu-util/src/: lib.rs
crates/headless/: Cargo.toml
crates/headless/src/: error.rs  lib.rs  vulkan.rs
crates/network/: Cargo.toml
crates/network/src/: authenticator.rs  channel.rs  client.rs  connection.rs  incoming.rs  lib.rs  message.rs  server.rs  stats.rs  util.rs  verification.rs
crates/persistent/: Cargo.toml
crates/persistent/src/: character.rs  configuration.rs  lib.rs  player.rs  region.rs  world.rs
crates/physics/: Cargo.toml
crates/physics/src/: collider.rs  groups.rs  lib.rs  shape.rs  world.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  notification.rs  player.rs  position.rs  region.rs  request.rs  rotation.rs  setup.rs  transform.rs  update.rs  world.rs
crates/server/: Cargo.toml
crates/server/src/: action.rs  lib.rs  observer.rs  region.rs  request.rs  server.rs  service.rs  user.rs  world.rs
crates/transient/: Cargo.toml
crates/transient/src/: character.rs  world.rs
crates/util/: Cargo.toml
crates/util/src/: align.rs  bit.rs  egui.rs  handle.rs  inspect.rs  interpolation.rs  iterator.rs  lib.rs  once.rs
crates/vulkan/: Cargo.toml
crates/vulkan/src/: api_level.rs  buffer.rs  chain.rs  command.rs  descriptor.rs  device.rs  error.rs  handle.rs  image.rs  instance.rs  lib.rs  object.rs  physical_device.rs  surface.rs  swapchain.rs  version.rs
