[package]
name = "client"
version = "0.0.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
ash-window = "0.7.0"
base64 = "0.13.0"
gpu-util = { path = "../gpu-util" }
copypasta = "0.7.1"
derive = { path = "../derive" }
egui = "0.13.1"
eyre = "0.6.5"
client-gpu = { path = "../client-gpu", features = ["nalgebra"] }
client-spirv = { path = "../client-spirv" }
generator = { path = "../generator" }
stable-eyre = "0.2.2"
nalgebra = "0.29.0"
network = { path = "../network" }
physics = { path = "../physics" }
protocol = { path = "../protocol" }
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "time"] }
rand = "0.8.4"
semver = "1"
server = { path = "../server" }
serde_json = "1.0.64"
serde = "1.0.125"
structopt = "0.3.21"
thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
util = { path = "../util", features = ["egui"] }
uuid = { version = "0.8.2", features = ["v4"] }
vulkan = { path = "../vulkan" }
webbrowser = "0.5.5"
winit = "0.25.0"
whoami = "1.1.2"
