[package]
name = "generator-shader"
version = "0.0.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
gpu-util = { path = "../gpu-util" }
spirv-std = { git = "https://github.com/wosim-net/rust-gpu.git", features = ["glam"] }

