[package]
name = "network"
version = "0.0.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
bincode = "1.3.3"
bytes = "1.0.1"
futures = "0.3.14"
libmdns = "0.6.1"
quinn = "0.7.2"
quinn-proto = "0.7.2"
rcgen = "0.8.11"
rustls = { version = "*", features = ["dangerous_configuration"] }
serde = "1.0.125"
thiserror = "1.0"
tokio = { version = "1.6.0", features = ["rt", "io-util"] }
tracing = "0.1.26"
util = { path = "../util" }
webpki = "0.21.4"
