[package]
name = "server"
version = "0.0.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bitflags = "1.2.1"
bytemuck = { version = "1.5.1", features = ["derive"] }
database = { path = "../database" }
derive = { path = "../derive" }
glam = "0.17"
itertools = "0.10"
jsonwebtoken = "7.2.0"
nalgebra = { version = "0.29.0", features = ["convert-glam017"] }
network = { path = "../network" }
persistent = { path = "../persistent" }
physics = { path = "../physics" }
protocol = { path = "../protocol" }
quinn = "0.7.2"
retain_mut = "0.1.3"
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "time"] }
tracing = "0.1.26"
transient = { path="../transient" }
util = { path = "../util" }
uuid = { version = "0.8.2", features = ["serde"] }
