[package]
name = "vulkan"
version = "0.0.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dependencies]
ash = "0.33.0"
bytemuck = "1.5.1"
semver = "1"
thiserror = "1.0.25"
gpu-allocator = { git = "https://github.com/wosim-net/gpu-allocator.git", features = ["vulkan"] }
